Adds one time events

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CryptoTracker</string>
+    <string name="error_request_timeout">The request timed out</string>
+    <string name="error_too_many_requests">Too many requests, your quota is completed</string>
+    <string name="error_no_internet">No internet, please check your connection</string>
+    <string name="error_server_error">Oops, something bad happened on our side. Please try again later</string>
+    <string name="error_serialization">Couldn\'t serialize or deserialize data</string>
+    <string name="error_unknown">Something unexpected happened. Please try again later</string>
 </resources>
